--- a/app/styling/searchPage.css
+++ b/app/styling/searchPage.css
@@ -1,3 +1,9 @@
+.searchPage {
+  /* background-image: url('../images/copenhagen.jpg'); */
+  background-size: 100vw auto;
+  height: 100vh;
+}
+
 .header {
   font-family: garamond;
   text-align: center;
@@ -14,6 +20,10 @@
 .food {
   width: 400px;
   text-align: center;
+}
+
+.foodTitle {
+  font-size: 30px;
 }
 
 /* Drinks Styling */
