--- a/app/styling/homePage.css
+++ b/app/styling/homePage.css
@@ -1,7 +1,7 @@
 .fullScreen {
   background-image: url('../images/beach.jpg');
   background-size: 100vw auto;
-  height: 100vh
+  height: 100vh;
 }
 
 .background {
@@ -11,6 +11,7 @@
 .homeBody {
   padding-left: 644px;
   padding-top: 184px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .title {
