set up backend with axios post requests

--- a/app/styling/searchPageContainer.css
+++ b/app/styling/searchPageContainer.css
@@ -2,6 +2,7 @@
   /* background-image: url('../images/copenhagen.jpg'); */
   background-size: 100vw auto;
   height: 100vh;
+  background-color: #F8962E;
 }
 
 /* Header Styling */
