fixed backend, created signup/login, edited formatting

--- a/app/styling/searchOptions.css
+++ b/app/styling/searchOptions.css
@@ -1,8 +1,12 @@
-/* Location */
+/* Header Styling */
 
 .location {
   display: flex;
   justify-content: center;
+}
+
+.searchIcon {
+  padding-top: 7px;
 }
 
 /* Foods Styling */
